fixed image hosting

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h1>Sang Park</h1>
       <h2>Web Developer</h2>
       <div class="icons">
-        <a href="https://github.com/shph119"> <img src="http://www.iconsdb.com/icons/preview/white/github-10-xxl.png" /></a>
-        <a href="https://www.linkedin.com/in/parksanghyun"> <img src="http://www.iconsdb.com/icons/preview/white/linkedin-5-xxl.png" /></a>
+        <a href="https://github.com/shph119"> <img src="http://res.cloudinary.com/dque3vywj/image/upload/v1463507557/github_logo_koysmt.png" /></a>
+        <a href="https://www.linkedin.com/in/parksanghyun"> <img src="http://res.cloudinary.com/dque3vywj/image/upload/v1463507558/linkedin_logo_qkd2va.png" /></a>
       </div>
     </div>
   </body>
