--- a/index.html
+++ b/index.html
@@ -1,24 +1,59 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Identity by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/header.css" media="screen">
+	<head>
+		<title>Sang Park</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-loading">
 
-    <title>Sang Hyun Park</title>
-  </head>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-  <img class="bg" src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/934717_10152199265145288_1648996573_n.jpg?oh=b587c37fb6341743ef38b01e41acc02a&oe=5799C005"/>
+				<!-- Main -->
+					<section id="main">
+						<header>
+							<span class="avatar"><img src="images/profile_picture.jpg" alt="" /></span>
+							<h1>Sang Park</h1>
+							<p>Software Developer</p>
+						</header>
 
-  <body class="group">
-    <div class="everything">
-      <h1>Sang Park</h1>
-      <h2>Web Developer</h2>
-      <div class="icons">
-        <a href="https://github.com/shph119"> <img src="http://res.cloudinary.com/dque3vywj/image/upload/v1463507557/github_logo_koysmt.png" /></a>
-        <a href="https://www.linkedin.com/in/parksanghyun"> <img src="http://res.cloudinary.com/dque3vywj/image/upload/v1463507558/linkedin_logo_qkd2va.png" /></a>
-      </div>
-    </div>
-  </body>
+						<footer>
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/parksanghyun" class="fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://github.com/shph119" class="fa-github">Github</a></li>
+								<li><a href="https://angel.co/sang-hyun-park" class="fa-angellist">AngelList</a></li>
+							</ul>
+						</footer>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="copyright">
+							<li>&copy; Sang Park</li><li></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
+
+	</body>
 </html>
