--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/profile_picture.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/profile_picture3.jpg" alt="" /></span>
 							<h1>Sang Park</h1>
 							<p>Software Developer</p>
 						</header>
