got docking nav bar

--- a/new_site/index.html
+++ b/new_site/index.html
@@ -3,24 +3,47 @@
 	<head>
 		<title>Sang Park</title>
 		<meta charset="utf-8" />
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquerystuff.js"></script>
+
 	</head>
 	<body>
-    <nav class="navbar">
-      <div class="myself">
+    <div class="navbar">
 				<h4>Sang Park </h4>
 				<div> Software Developer </div>
+		</div>
+		<div class="nav-options">
+			<div class="container">
+				<ul>
+					<li> home </li>
+					<li> about me </li>
+					<li> my projects </li>
+					<li> contact </li>
+				</ul>
 			</div>
-			<div class="nav-options">
-				<div>
-					<span> home </span>
-					<span> about me </span>
-					<span> my projects </span>
-					<span> contact </span>
-				</div>
-			</div>
-    </nav>
+		</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
+		<div>a</div>
 			<!-- <div id="wrapper">
 
 					<section id="main">
