--- a/new_site/index.html
+++ b/new_site/index.html
@@ -11,64 +11,46 @@
 	</head>
 	<body>
     <div class="navbar">
-				<h4>Sang Park </h4>
+				<h2>Sang Park </h2>
 				<div> Software Developer </div>
 		</div>
-		<div class="nav-options">
+		<nav class="nav-options">
 			<div class="container">
 				<ul>
-					<li> home </li>
-					<li> about me </li>
-					<li> my projects </li>
-					<li> contact </li>
+					<li class="options"> about me </li>
+					<li class="options"> my projects </li>
+					<li class="options"> contact </li>
+					<li class="dropdown-wrapper">
+						<div class="options dropdown-container ">
+							links
+						</div>
+						<div class="dropdown-content">
+							<ul>
+								<li> LinkedIn </li>
+								<li> Github</li>
+								<li> AngelList</li>
+								<li> Resume</li>
+							</ul>
+						</div>
+					</li>
+
 				</ul>
 			</div>
-		</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-		<div>a</div>
-			<!-- <div id="wrapper">
+		</nav>
 
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="images/profile_picture3.jpg" alt="" /></span>
-							<h1>Sang Park</h1>
-							<p>Software Developer</p>
-						</header>
+		<main>
+			<section id="about-me">
+				<h4> About Me </h4>
+			</section>
+			<section id="my-projects">
+				<h4> My Projects </h4>
+			</section>
+			<section id="contact">
+				<h4> Contact </h4>
+			</section>
+		</main>
+		<footer></footer>
 
-						<footer>
-							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/parksanghyun" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="https://github.com/shph119" class="fa-github">Github</a></li>
-								<li><a href="https://angel.co/sang-hyun-park" class="fa-angellist">AngelList</a></li>
-							</ul>
-						</footer>
-					</section>
 
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; Sang Park</li><li></li>
-						</ul>
-					</footer>
-
-			</div>
- -->
 	</body>
 </html>
