image/projects setup

--- a/new_site/index.html
+++ b/new_site/index.html
@@ -53,12 +53,17 @@
 							<h6>
 								LiftWithMe
 							</h6>
-							<p>
-								LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
-							</p>
-							<div class="project-links">
-								<button href="#">Live</button>
-								<button href="#">Github</button>
+							<div class="description">
+								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/f9/280062/2cf582eaa0c572b854e5d6a48cda278b-original.png" />
+								<div>
+									<p>
+										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
+									</p>
+									<div class="project-links">
+										<button href="#">GITHUB</button>
+										<button href="#">LIVE</button>
+									</div>
+								</div>
 							</div>
 
 						</li>
@@ -66,12 +71,18 @@
 							<h6>
 								Pacman
 							</h6>
-							<p>
-								This is a remake of the classic arcade game Pac-man, built for browser using Javascript and HTML5 Canvas. It features a custom drawn maze and characters using pure HTML Canvas, as well as a simplified ghost AI to ensure that the ghosts are constantly moving around.
-							</p>
-							<div class="project-links">
-								<button href="#">Live</button>
-								<button href="#">Github</button>
+							<div class="description">
+								<div>
+									<p>
+										This is a remake of the classic arcade game Pac-man, built for browser using Javascript and HTML5 Canvas. It features a custom drawn maze and characters using pure HTML Canvas, as well as a simplified ghost AI to ensure that the ghosts are constantly moving around.
+									</p>
+										<div class="project-links">
+											<button href="#">GITHUB</button>
+											<button href="#">LIVE</button>
+										</div>
+								</div>
+								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/d8/280067/6747239617e9f0b4109736e7e39685a9-original.png" />
+
 							</div>
 
 						</li>
@@ -79,12 +90,17 @@
 							<h6>
 								ActiveRecordLite
 							</h6>
-							<p>
-								The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
-							</p>
-							<div class="project-links">
-								<button href="#">Live</button>
-								<button href="#">Github</button>
+							<div class="description">
+								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/enhanced_screenshots/571761-original." />
+								<div>
+									<p>
+										The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
+									</p>
+									<div class="project-links">
+										<button href="#">GITHUB</button>
+										<button href="#">LIVE</button>
+									</div>
+								</div>
 							</div>
 
 						</li>
