finished styling, added footer

--- a/new_site/index.html
+++ b/new_site/index.html
@@ -42,7 +42,7 @@
 			<section id="about-me">
 				<h4> About Me </h4>
 				<p>
-					I am a software engineer with experience using Javascript, React, Ruby, and Rails. If you catch me on my computer, I'm probably working on some personal project, or browsing reddit and looking at cute cat videos (most likely the latter). Otherwise, I like to stay active by playing the occasional pick-up basketball, volleyball, and hitting the gym (hit me up if you ever need a +1 for a pick-up game!).
+					I am a software engineer with experience using Javascript, React, Ruby, and Rails. If you catch me on my computer, I'm probably working on some personal project, or browsing reddit and looking at cute cat videos (most likely the latter). I like to stay active by playing the occasional pick-up basketball, volleyball, and hitting the gym.
 				</p>
 			</section>
 			<section id="my-projects">
@@ -60,8 +60,15 @@
 										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
 									</p>
 									<div class="project-links">
-										<button href="#">GITHUB</button>
-										<button href="#">LIVE</button>
+										<a href="https://github.com/shph119/LiftWithMe">
+											<button>
+												GITHUB
+											</button>
+										</a> <a href="http://www.liftwithme.co/">
+											<button>
+												LIVE
+											</button>
+										</a>
 									</div>
 								</div>
 							</div>
@@ -77,8 +84,16 @@
 										This is a remake of the classic arcade game Pac-man, built for browser using Javascript and HTML5 Canvas. It features a custom drawn maze and characters using pure HTML Canvas, as well as a simplified ghost AI to ensure that the ghosts are constantly moving around.
 									</p>
 										<div class="project-links">
-											<button href="#">GITHUB</button>
-											<button href="#">LIVE</button>
+											<a href="https://github.com/shph119/Pacman">
+												<button>
+													GITHUB
+												</button>
+											</a>
+											<a href="http://www.sangpark.me/Pacman/">
+												<button>
+													LIVE
+												</button>
+											</a>
 										</div>
 								</div>
 								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/d8/280067/6747239617e9f0b4109736e7e39685a9-original.png" />
@@ -97,8 +112,11 @@
 										The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
 									</p>
 									<div class="project-links">
-										<button href="#">GITHUB</button>
-										<button href="#">LIVE</button>
+										<a href="https://github.com/shph119/ActiveRecordLite">
+											<button >
+												GITHUB
+											</button>
+										</a>
 									</div>
 								</div>
 							</div>
@@ -107,18 +125,26 @@
 					</ul>
 				</div>
 			</section>
-			<section id="contact">
-				<h4> Contact </h4>
-				<ul>
-					<li>email</li>
-					<li>phone</li>
-					<li>linkedin</li>
-					<li>github</li>
-					<li>angellist</li>
-				</ul>
-			</section>
 		</main>
-		<footer></footer>
+		<footer>
+			<div>
+				<p> Sang Park </p>
+				<ul>
+					<li>
+						sanghyup@alumni.cmu.edu
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/parksanghyun"> LinkedIn </a>
+					</li>
+					<li>
+						<a href="github.com/shph119">Github</a>
+					</li>
+					<li>
+						<a href="https://angel.co/sang-hyun-park"> AngelList </a>
+					</li>
+				</ul>
+			</div>
+		</footer>
 
 
 	</body>
