--- a/index.html
+++ b/index.html
@@ -1,59 +1,166 @@
 <!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Sang Park</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquerystuff.js"></script>
+
 	</head>
-	<body class="is-loading">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="images/profile_picture3.jpg" alt="" /></span>
-							<h1>Sang Park</h1>
-							<p>Software Developer</p>
-						</header>
-
-						<footer>
-							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/parksanghyun" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="https://github.com/shph119" class="fa-github">Github</a></li>
-								<li><a href="https://angel.co/sang-hyun-park" class="fa-angellist">AngelList</a></li>
+	<body>
+    <div class="navbar">
+				<h2>Sang Park </h2>
+				<div> Software Engineer / Web Developer </div>
+		</div>
+		<nav class="nav-options">
+			<div class="container">
+				<ul>
+					<li class="options" id="about-me-nav"> about me </li>
+					<li class="options" id="projects-nav"> my projects </li>
+					<li class="options" id="contact-nav"> contact </li>
+					<li class="dropdown-wrapper">
+						<div class="options dropdown-container ">
+							links
+						</div>
+						<div class="dropdown-content">
+							<ul>
+								<li>
+									<a href="https://www.linkedin.com/in/parksanghyun">
+										LinkedIn
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/shph119">
+										Github
+									</a>
+								</li>
+								<li>
+									<a href="https://angel.co/sang-hyun-park">
+										AngelList
+									</a>
+								</li>
+								<li>
+									<a href="assets/resume.pdf">
+										Resume
+									</a>
+								</li>
 							</ul>
-						</footer>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; Sang Park</li><li></li>
-						</ul>
-					</footer>
-
+						</div>
+					</li>
+				</ul>
 			</div>
+		</nav>
 
-		<!-- Scripts -->
-			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
+		<main>
+			<section id="about-me">
+				<h4> About Me </h4>
+				<p>
+					I am a software engineer with experience using Javascript, React, Ruby, and Rails. If you catch me on my computer, I'm probably working on some personal project, or browsing reddit and looking at cute cat videos (most likely the latter). I like to stay active by playing the occasional pick-up basketball, volleyball, and hitting the gym.
+				</p>
+			</section>
+			<section id="my-projects">
+				<h4> My Projects </h4>
+				<div id="projects-wrapper">
+					<ul>
+						<li>
+							<h6>
+								LiftWithMe
+							</h6>
+							<div class="description">
+								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/f9/280062/2cf582eaa0c572b854e5d6a48cda278b-original.png" />
+								<div>
+									<p>
+										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
+									</p>
+									<div class="project-links">
+										<a href="https://github.com/shph119/LiftWithMe">
+											<button>
+												GITHUB
+											</button>
+										</a> <a href="http://www.liftwithme.co/">
+											<button>
+												LIVE
+											</button>
+										</a>
+									</div>
+								</div>
+							</div>
+
+						</li>
+						<li>
+							<h6>
+								Pacman
+							</h6>
+							<div class="description">
+								<div>
+									<p>
+										This is a remake of the classic arcade game Pac-man, built for browser using Javascript and HTML5 Canvas. It features a custom drawn maze and characters using pure HTML Canvas, as well as a simplified ghost AI to ensure that the ghosts are constantly moving around.
+									</p>
+										<div class="project-links">
+											<a href="https://github.com/shph119/Pacman">
+												<button>
+													GITHUB
+												</button>
+											</a>
+											<a href="http://www.sangpark.me/Pacman/">
+												<button>
+													LIVE
+												</button>
+											</a>
+										</div>
+								</div>
+								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/d8/280067/6747239617e9f0b4109736e7e39685a9-original.png" />
+
+							</div>
+
+						</li>
+						<li>
+							<h6>
+								ActiveRecordLite
+							</h6>
+							<div class="description">
+								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/enhanced_screenshots/571761-original." />
+								<div>
+									<p>
+										The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
+									</p>
+									<div class="project-links">
+										<a href="https://github.com/shph119/ActiveRecordLite">
+											<button >
+												GITHUB
+											</button>
+										</a>
+									</div>
+								</div>
+							</div>
+
+						</li>
+					</ul>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div>
+				<p> Sang Park </p>
+				<ul>
+					<li>
+						sanghyup@alumni.cmu.edu
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/parksanghyun"> LinkedIn </a>
+					</li>
+					<li>
+						<a href="github.com/shph119">Github</a>
+					</li>
+					<li>
+						<a href="https://angel.co/sang-hyun-park"> AngelList </a>
+					</li>
+				</ul>
+			</div>
+		</footer>
+
 
 	</body>
 </html>
