--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="assets/resume.pdf">
+									<a href="assets/Resume.pdf">
 										Resume
 									</a>
 								</li>
