--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	</head>
 	<body>
-    <div class="navbar">
+    <!-- <div class="navbar">
 				<h2>Sang Park </h2>
 				<div> Software Engineer / Web Developer </div>
 		</div>
@@ -51,11 +51,16 @@
 					</li>
 				</ul>
 			</div>
-		</nav>
+		</nav> -->
 
 		<main>
 			<section id="about-me">
-				<h4> About Me </h4>
+				<div class="under-construction">
+					Under Construction
+				</div>
+			</section>
+		</main>
+				<!-- <h4> About Me </h4>
 				<p>
 					I am a software engineer with experience using Javascript, React, Ruby, and Rails. If you catch me on my computer, I'm probably working on some personal project, or browsing reddit and looking at cute cat videos (most likely the latter). I like to stay active by playing the occasional pick-up basketball, volleyball, and hitting the gym.
 				</p>
@@ -159,7 +164,7 @@
 					</li>
 				</ul>
 			</div>
-		</footer>
+		</footer> -->
 
 
 	</body>
