--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div class="container">
 				<ul>
 					<li class="options" id="about-me-nav"> about me </li>
+					<li class="options" id="experience-nav"> experience </li>
 					<li class="options" id="projects-nav"> my projects </li>
 					<li class="options" id="contact-nav"> contact </li>
 					<li class="dropdown-wrapper">
@@ -57,10 +58,10 @@
 			<section id="about-me">
 				<h4> About Me </h4>
 					<p>
-						I am a software engineer with experience using Javascript, React, Ruby, and Rails. If you catch me on my computer, I'm probably working on some personal project, or browsing reddit and looking at cute cat videos (most likely the latter). I like to stay active by playing the occasional pick-up basketball, volleyball, and hitting the gym.
+						I am a software engineer with experience using Javascript, Ember, React, Ruby, and Rails. If you catch me on my computer, I'm probably browsing reddit and looking at cute cat videos. I also have a somewhat unhealthy obsession with basketball and volleyball.
 					</p>
 			</section>
-			<section id="my-projects">
+			<section id="experience">
 				<h4> Work Experience </h4>
 				<div id="experience-wrapper">
 					<ul>
@@ -71,7 +72,12 @@
 							<div class="description">
 								<div>
 									<p>
-										Addepar is the first investment management platform that easily handles all of your assets, connecting your financial goals and objectives with real world actionable insights. 
+										Addepar is an investment management platform that can easily handle all of your assets, connecting your financial goals and objectives with real world actionable insights. 
+										<br>
+										As a software engineer at Addepar, I've built and tested a number of features used in our core application. Some of these features include an enhancement of the existing permission system
+										and other core administrative features for financial advisors and firm admins.
+										<br>
+										Technologies Used: Javascript, JQuery, Ember.js, Java, MySQL, HTML5, SCSS 
 									</p>
 								</div>
 								<img id="logo" src="https://media.licdn.com/media-proxy/ext?w=800&h=800&hash=tG5szM4al6zkIyxB8HA%2FCUXm0RE%3D&ora=1%2CaFBCTXdkRmpGL2lvQUFBPQ%2CxAVta5g-0R6jnhodx1Ey9KGTqAGj6E5DQJHUA3L0CHH05IbfPWi4K8CJf7LypUBCKSxSjQBjer61EjTiQY60LozueIoli5XjIJj5aRUPbhU4hGUB_N88" />
@@ -84,31 +90,6 @@
 				<h4> My Projects </h4>
 				<div id="projects-wrapper">
 					<ul>
-						<li>
-							<h6>
-								LiftWithMe
-							</h6>
-							<div class="description">
-								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/f9/280062/2cf582eaa0c572b854e5d6a48cda278b-original.png" />
-								<div>
-									<p>
-										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
-									</p>
-									<div class="project-links">
-										<a href="https://github.com/shph119/LiftWithMe">
-											<button>
-												GITHUB
-											</button>
-										</a> <a href="http://www.liftwithme.co/">
-											<button>
-												LIVE
-											</button>
-										</a>
-									</div>
-								</div>
-							</div>
-
-						</li>
 						<li>
 							<h6>
 								Pacman
@@ -172,7 +153,7 @@
 						<a href="https://www.linkedin.com/in/parksanghyun"> LinkedIn </a>
 					</li>
 					<li>
-						<a href="github.com/shph119">Github</a>
+						<a href="https://www.github.com/sang-park">Github</a>
 					</li>
 					<li>
 						<a href="https://angel.co/sang-hyun-park"> AngelList </a>
