--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										Technologies Used: Javascript, JQuery, Ember.js, Java, MySQL, HTML5, SCSS 
 									</p>
 								</div>
-								<img id="logo" src="https://media.licdn.com/media-proxy/ext?w=800&h=800&hash=tG5szM4al6zkIyxB8HA%2FCUXm0RE%3D&ora=1%2CaFBCTXdkRmpGL2lvQUFBPQ%2CxAVta5g-0R6jnhodx1Ey9KGTqAGj6E5DQJHUA3L0CHH05IbfPWi4K8CJf7LypUBCKSxSjQBjer61EjTiQY60LozueIoli5XjIJj5aRUPbhU4hGUB_N88" />
+								<img id="logo" src="./images/addeparlogo.jpeg" />
 							</div>
 						</li>
 					</ul>
