update css and images

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 								<div>
 									<p>
 										Addepar is an investment management platform that can easily handle all of your assets, connecting your financial goals and objectives with real world actionable insights. 
-										<br>
+										<br><br>
 										As a software engineer at Addepar, I've built and tested a number of features used in our core application. Some of these features include an enhancement of the existing permission system
 										and other core administrative features for financial advisors and firm admins.
-										<br>
+										<br><br>
 										Technologies Used: Javascript, JQuery, Ember.js, Java, MySQL, HTML5, SCSS 
 									</p>
 								</div>
@@ -112,17 +112,37 @@
 											</a>
 										</div>
 								</div>
-								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/Project/d8/280067/6747239617e9f0b4109736e7e39685a9-original.png" />
+								<img src="./images/pacman.png" />
 
 							</div>
 
 						</li>
 						<li>
 							<h6>
+								LiftWithMe
+							</h6>
+							<div class="description">
+								<img src="./images/liftwithme.png" />
+								<div>
+									<p>
+										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
+									</p>
+									<div class="project-links">
+										<a href="https://github.com/shph119/LiftWithMe">
+											<button>
+												GITHUB
+											</button>
+										</a>
+									</div>
+								</div>
+							</div>
+ 						</li>
+						<li>
+							<h6>
 								ActiveRecordLite
 							</h6>
 							<div class="description">
-								<img src="https://s3.amazonaws.com/poly-screenshots.angel.co/enhanced_screenshots/571761-original." />
+								<img src="./images/activerec.png" />
 								<div>
 									<p>
 										The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
