--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://github.com/shph119">
+									<a href="https://github.com/sang-park">
 										Github
 									</a>
 								</li>
@@ -43,7 +43,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="assets/Resume.pdf">
+									<a href="./assets/resume.pdf">
 										Resume
 									</a>
 								</li>
