fix resume link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./assets/resume.pdf">
+									<a href="https://www.sangpark.me/assets/Resume.pdf">
 										Resume
 									</a>
 								</li>
