--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 										This is a remake of the classic arcade game Pac-man, built for browser using Javascript and HTML5 Canvas. It features a custom drawn maze and characters using pure HTML Canvas, as well as a simplified ghost AI to ensure that the ghosts are constantly moving around.
 									</p>
 										<div class="project-links">
-											<a href="https://github.com/shph119/Pacman">
+											<a href="https://github.com/sang-park/Pacman">
 												<button>
 													GITHUB
 												</button>
@@ -128,7 +128,7 @@
 										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
 									</p>
 									<div class="project-links">
-										<a href="https://github.com/shph119/LiftWithMe">
+										<a href="https://github.com/sang-park/LiftWithMe">
 											<button>
 												GITHUB
 											</button>
@@ -148,7 +148,7 @@
 										The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
 									</p>
 									<div class="project-links">
-										<a href="https://github.com/shph119/ActiveRecordLite">
+										<a href="https://github.com/sang-park/ActiveRecordLite">
 											<button >
 												GITHUB
 											</button>
