--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 		</nav>
 
 		<main>
-			<section id="about-me">
+			<section>
+				<div class="under-construction">
+					Under Construction
+				</div>
+			</section>
+			<!-- <section id="about-me">
 				<h4> About Me </h4>
 					<p>
 						I am a software engineer with experience using Javascript, Ember, React, Ruby, and Rails. If you catch me on my computer, I'm probably browsing reddit and looking at cute cat videos. I also have a somewhat unhealthy obsession with basketball and volleyball.
@@ -160,7 +165,7 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 		</main>
 		<footer>
 			<div>
@@ -181,7 +186,5 @@
 				</ul>
 			</div>
 		</footer>
-
-
 	</body>
 </html>
