--- a/index.html
+++ b/index.html
@@ -10,181 +10,8 @@
 
 	</head>
 	<body>
-    <div class="navbar">
-				<h2>Sang Park </h2>
-				<div> Software Engineer / Web Developer </div>
+		<div>
+			under construction
 		</div>
-		<nav class="nav-options">
-			<div class="container">
-				<ul>
-					<li class="options" id="about-me-nav"> about me </li>
-					<li class="options" id="experience-nav"> experience </li>
-					<li class="options" id="projects-nav"> my projects </li>
-					<li class="options" id="contact-nav"> contact </li>
-					<li class="dropdown-wrapper">
-						<div class="options dropdown-container ">
-							links
-						</div>
-						<div class="dropdown-content">
-							<ul>
-								<li>
-									<a href="https://www.linkedin.com/in/parksanghyun">
-										LinkedIn
-									</a>
-								</li>
-								<li>
-									<a href="https://github.com/sang-park">
-										Github
-									</a>
-								</li>
-								<li>
-									<a href="https://angel.co/sang-hyun-park">
-										AngelList
-									</a>
-								</li>
-								<li>
-									<a href="https://www.sangpark.me/assets/Resume.pdf">
-										Resume
-									</a>
-								</li>
-							</ul>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</nav>
-
-		<main>
-			<section>
-				<div class="under-construction">
-					Under Construction
-				</div>
-			</section>
-			<!-- <section id="about-me">
-				<h4> About Me </h4>
-					<p>
-						I am a software engineer with experience using Javascript, Ember, React, Ruby, and Rails. If you catch me on my computer, I'm probably browsing reddit and looking at cute cat videos. I also have a somewhat unhealthy obsession with basketball and volleyball.
-					</p>
-			</section>
-			<section id="experience">
-				<h4> Work Experience </h4>
-				<div id="experience-wrapper">
-					<ul>
-						<li>
-							<h6>
-								Addepar
-							</h6>
-							<div class="description">
-								<div>
-									<p>
-										Addepar is an investment management platform that can easily handle all of your assets, connecting your financial goals and objectives with real world actionable insights. 
-										<br><br>
-										As a software engineer at Addepar, I've built and tested a number of features used in our core application. Some of these features include an enhancement of the existing permission system
-										and other core administrative features for financial advisors and firm admins.
-										<br><br>
-										Technologies Used: Javascript, JQuery, Ember.js, Java, MySQL, HTML5, SCSS 
-									</p>
-								</div>
-								<img id="logo" src="./images/addeparlogo.jpeg" />
-							</div>
-						</li>
-					</ul>
-				</div>
-			</section>
-			<section id="my-projects">
-				<h4> My Projects </h4>
-				<div id="projects-wrapper">
-					<ul>
-						<li>
-							<h6>
-								Pacman
-							</h6>
-							<div class="description">
-								<div>
-									<p>
-										This is a remake of the classic arcade game Pac-man, built for browser using Javascript and HTML5 Canvas. It features a custom drawn maze and characters using pure HTML Canvas, as well as a simplified ghost AI to ensure that the ghosts are constantly moving around.
-									</p>
-										<div class="project-links">
-											<a href="https://github.com/sang-park/Pacman">
-												<button>
-													GITHUB
-												</button>
-											</a>
-											<a href="http://www.sangpark.me/Pacman/">
-												<button>
-													LIVE
-												</button>
-											</a>
-										</div>
-								</div>
-								<img src="./images/pacman.png" />
-
-							</div>
-
-						</li>
-						<li>
-							<h6>
-								LiftWithMe
-							</h6>
-							<div class="description">
-								<img src="./images/liftwithme.png" />
-								<div>
-									<p>
-										LiftWithMe is a fitness-based social pairing web application designed to pair up people who don't like to hit the gym alone. It utilizes Ruby on Rails on the back end with React.js / Flux on the front end to create a single-page full stack web app.
-									</p>
-									<div class="project-links">
-										<a href="https://github.com/sang-park/LiftWithMe">
-											<button>
-												GITHUB
-											</button>
-										</a>
-									</div>
-								</div>
-							</div>
- 						</li>
-						<li>
-							<h6>
-								ActiveRecordLite
-							</h6>
-							<div class="description">
-								<img src="./images/activerec.png" />
-								<div>
-									<p>
-										The primary reason for this project was to get a better understanding of how ActiveRecord works under the hood. ARL is a stripped down ORM that allows simple communication between the database and rails. Instruction included in the ReadMe.
-									</p>
-									<div class="project-links">
-										<a href="https://github.com/sang-park/ActiveRecordLite">
-											<button >
-												GITHUB
-											</button>
-										</a>
-									</div>
-								</div>
-							</div>
-
-						</li>
-					</ul>
-				</div>
-			</section> -->
-		</main>
-		<footer>
-			<div>
-				<p> Sang Park </p>
-				<ul>
-					<li>
-						sanghyup@alumni.cmu.edu
-					</li>
-					<li>
-						<a href="https://www.linkedin.com/in/parksanghyun"> LinkedIn </a>
-					</li>
-					<li>
-						<a href="https://www.github.com/sang-park">Github</a>
-					</li>
-					<li>
-						<a href="https://angel.co/sang-hyun-park"> AngelList </a>
-					</li>
-				</ul>
-			</div>
-		</footer>
 	</body>
 </html>
